Refactor: Account management and UI enhancements
- Implemented account editing functionality, including name, balance, and currency updates.
- Introduced `AccountNotifierUseCase` to trigger data refresh across relevant ViewModels when account details change.
- Updated `ExpensesViewModel`, `IncomeViewModel`, and `AccountViewModel` to observe and react to account changes.
- Enhanced `CustomListItem` to support leading content composables in addition to emoji/text.
- Improved `CustomTextInput` with leading text and icon support, and refined styling.
- Added a currency selection bottom sheet (`SheetCurrencies`).
- Updated `BigDecimal.formatAsWholeThousands` to optionally show decimal places.
- Extended `CurrencyIsoCode` with display name and image resource IDs.
- Added search functionality to `ArticlesScreenRoot` with debouncing.
- Renamed and reorganized some account-related files and classes for clarity.
- Added new icons: `ic_cancel.xml`, `ic_check.xml`, `ic_close.xml`, `ic_eur.xml`, `ic_rub.xml`, `ic_usd.xml`.
- Updated color theme and string resources.
- Minor UI tweaks and code refactoring in various screens and components.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="income_title">Доходы сегодня</string>
 
     <string name="account_title">Мой счет</string>
+    <string name="account_name">Название</string>
     <string name="account_balance">Баланс</string>
     <string name="account_currency">Валюта</string>
 
@@ -26,6 +27,10 @@
     <string name="ok_big">ОК</string>
     <string name="no_internet_connection">Нет подключения к интернету</string>
     <string name="understand">Понятно</string>
+    
+    <string name="currency_rub">Российский рубль</string>
+    <string name="currency_usd">Американский доллар</string>
+    <string name="currency_eur">Евро</string>
 
     <string name="alert_base_title">Ошибка</string>
     <string name="alert_base_description">Произошла непредвиденная ошибка. Попробуйте, пожалуйста, позже</string>
