- Fix balance validation to allow negative numbers - Fix bottom navigation bar behavior: prevent recreating screens on tab switch - Implement double back press to exit application - Add date filtering for income and expense transactions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
     <string name="navbar_account">Счет</string>
     <string name="navbar_articles">Статьи</string>
     <string name="navbar_settings">Настройки</string>
+
+    <string name="exit_double_tap">Нажмите назад ещё раз, чтобы выйти</string>
 </resources>
