Refactor: Improve transaction editing and update notifications
- Renamed `AccountNotifierUseCase` to `UpdateNotifierUseCase` for broader applicability.
- In `TransactionEditorViewModel`:
    - Populated fields with existing transaction data when editing.
    - Added client-side validation for required fields before saving.
    - Used `UpdateNotifierUseCase` to signal data changes.
    - Converted amount to `BigDecimal` directly instead of storing an intermediate formatted value.
- Updated `TransactionEditorScreenRoot`:
    - Instantiated `TransactionEditorViewModel` using `viewModel()` composable.
    - Displayed currency symbol next to the account in the list item.
    - Handled `ShowClientError` effect to display specific error messages.
    - Added validation for amount input to allow currency symbols.
- Added `alert_reqiured_fields_description` string resource.
- Updated `AccountEditViewModel`, `AccountViewModel`, and `TransactionsViewModel` to use `UpdateNotifierUseCase`.
- Removed `item` from `TransactionEditorState` as data is now directly populated in individual state fields.
- Added `OnTimeSelected` and `OnOpenTimePickerModal` to `TransactionEditorIntent`.
- Added `ShowTimePickerModal` to `TransactionEditorEffect`.
- Added `trailingText` parameter to `CustomTextInput`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <!-- Alert -->
     <string name="alert_base_title">Ошибка</string>
     <string name="alert_base_description">Произошла непредвиденная ошибка. Попробуйте, пожалуйста, позже</string>
+    <string name="alert_reqiured_fields_description">Заполнены не все обязательные поля</string>
 
     <!-- Navbar names -->
     <string name="navbar_expenses">Расходы</string>
