feat: Implement transaction analysis feature
- Added `AnalyzeScreen` to `Screens.kt` for navigation.
- Implemented `AnalyzeScreenRoot.kt` to display transaction analysis, including period selection and category breakdown.
- Created `AnalyzeViewModel.kt` to manage data fetching, state updates, and user intents for the analysis screen.
- Introduced `GetCategoriesWithPercentUseCase.kt` to calculate and group transactions by category with their respective percentages and total amounts.
- Added `CategoryStats.kt` data class to represent category statistics.
- Implemented `AnalyzeViewModelFactory.kt` for `AnalyzeViewModel` instantiation.
- Added necessary string resources for the analysis feature.
- Integrated `AnalyzeScreenRoot` into `AppNavHost.kt`.
- Added navigation to `AnalyzeScreen` from `HistoryScreenRoot`.
- Created unit tests for `GetCategoriesWithPercentUseCase`.
- Refactored UI utility imports to use `com.backcube.ui.utils` and `com.backcube.ui.theme`.
- Updated `BigDecimalExtension.kt` documentation for clarity.

--- a/features/transactions/src/main/res/values/strings.xml
+++ b/features/transactions/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="my_incomes_title">Мои доходы</string>
 
     <string name="history_title">Моя история</string>
+
+    <string name="analyze_title">Анализ</string>
+    <string name="analyze_period_start">Период: начало</string>
+    <string name="analyze_period_end">Период: конец</string>
 </resources>
