Refactor: Improve network connectivity check and display empty state
- In `NetworkConnectivityObserver`:
    - Updated `observe()` to check for `NET_CAPABILITY_VALIDATED` in addition to `NET_CAPABILITY_INTERNET` to ensure actual internet connectivity.
    - Added `onCapabilitiesChanged` callback to update connectivity status when network capabilities change.
- In `AnalyzeScreen`:
    - Displayed an "empty" message when there are no items to show.
- Added `empty` string resource.

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="currency_rub">Российский рубль</string>
     <string name="currency_usd">Американский доллар</string>
     <string name="currency_eur">Евро</string>
+    <string name="empty">Пустовато тут</string>
 
     <!-- Alert -->
     <string name="alert_base_title">Ошибка</string>
