--- a/features/transactions/src/main/res/values/strings.xml
+++ b/features/transactions/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
     <!-- Transactions -->
     <string name="expense_title">Расходы сегодня</string>
     <string name="my_expenses_title">Мои расходы</string>
+    <string name="expense_delete">Удалить расход</string>
 
     <string name="income_title">Доходы сегодня</string>
     <string name="my_incomes_title">Мои доходы</string>
+    <string name="income_delete">Удалить доход</string>
 
     <string name="history_title">Моя история</string>
 
