Refactor: Implement charts for account and transaction analysis
- Added `AnimatedChartView` for displaying bar and line charts with animations.
- Introduced `DonutChart` for visualizing category spending percentages.
- Added `ChartPoint` data class to represent points on a chart.
- Added `ChartType` enum for selecting between Bar and Line charts.
- Added `ChartTypeToggle` composable for switching chart types.
- Implemented `GetCategoriesWithPercentUseCase` to calculate category statistics for the donut chart.
- Added `CategoryStats` data model for category statistics.
- Added `CategorySpendingDonutUiModel` for donut chart items.
- Mapped `CategoryStats` to `CategorySpendingDonutUiModel` for UI display.
- Integrated `AnimatedChartView` into `AccountScreenRoot` to display account balance history.
- Added `OnChangeGraphType` intent to `AccountViewModel` for toggling chart types.
- Updated `AccountState` to include `chartPoints` and `chartType`.
- Mapped `AccountHistoryResponseModel` to `List<ChartPoint>` for chart display.
- Integrated `DonutChart` into `AnalyzeScreenRoot` to display transaction category distribution.
- Updated `AnalyzeState` to include `itemsDonutUiModel`.
- Added `other` string resource for "Other" category in charts.
- Added `account_change_graphics_button` string resource.
- Removed unused `ExampleInstrumentedTest` and `ExampleUnitTest` files from various modules.
- Removed `GetCategoriesWithPercentUseCaseTest` as it's not implemented.
- Added `ui-tooling` dependency.

--- a/features/account/src/main/res/values/strings.xml
+++ b/features/account/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="account_name">Название</string>
     <string name="account_balance">Баланс</string>
     <string name="account_currency">Валюта</string>
+
+    <string name="account_change_graphics_button">Изменить тип графика</string>
 </resources>
