--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="currency_usd">Американский доллар</string>
     <string name="currency_eur">Евро</string>
     <string name="empty">Пустовато тут</string>
+    <string name="other">Прочее</string>
 
     <!-- Alert -->
     <string name="alert_base_title">Ошибка</string>
