Refactor: Enhance data layer structure and visibility
- Made numerous classes and interfaces within the `core/data` module `internal` to restrict their visibility. This includes DAOs, entities, data sources, API interfaces, and Dagger modules.
- Removed unused fake repository implementations (`FakeAccountRepositoryImpl`, `FakeCategoryRepositoryImpl`, `FakeTransactionRepositoryImpl`) and their associated utility file.
- In `SettingsState`, removed the `hasError` field.
- In `GetSettingsListUseCase`, removed the "Звуки" (Sounds) setting item.
- In `SyncRepositoryImpl`, replaced `TransactionsLocalDataSourceImpl` with `TransactionsLocalDataSource` and added logic to delete a transaction locally after successful remote creation.
- Added new string resources for settings screen items.

--- a/features/settings/src/main/res/values/strings.xml
+++ b/features/settings/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <!-- Settings -->
     <string name="settings_title">Настройки</string>
+    <string name="settings_dark_theme">Темная тема</string>
+    <string name="settings_main_color">Основной цвет</string>
+    <string name="settings_vibrate">Хаптики</string>
+    <string name="settings_password">Код пароль</string>
+    <string name="settings_sync">Синхронизация</string>
+    <string name="settings_language">Язык</string>
+    <string name="settings_about">О программе</string>
 </resources>
