Refactor: Enhance settings screen with navigation and new sub-screens
- Restructured the settings feature into a `main` package and sub-packages for individual settings screens (about, language, main_color, vibrate).
- Introduced `SettingItemId` enum to identify different setting items.
- Updated `SettingsUiModel` to use `@StringRes` for name and include `SettingItemId`.
- Implemented navigation from the main settings screen to new sub-screens:
    - `SettingAboutScreen`
    - `SettingLanguageScreen`
    - `SettingMainColorScreen`
    - `SettingVibrateScreen`
- Created ViewModels, States, Effects, and Intents for each new settings sub-screen.
- `SettingsViewModel` now handles dark theme toggling via `PreferencesRepository` and navigation to sub-screens.
- Added new string resources for settings titles and about screen information (version, last update).
- Updated `AppNavHost` to include routes for the new settings sub-screens.
- Updated `SettingComponent` to provide ViewModels for the new sub-screens.
- Enabled `buildConfig` in `settings/build.gradle.kts`.

--- a/features/settings/src/main/res/values/strings.xml
+++ b/features/settings/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="settings_password">Код пароль</string>
     <string name="settings_sync">Синхронизация</string>
     <string name="settings_language">Язык</string>
+
     <string name="settings_about">О программе</string>
+    <string name="settings_about_version">Версия: %1$s (%2$s)</string>
+    <string name="settings_about_last_update">Последнее обновление: %1$s</string>
 </resources>
