Refactor: Introduce localization and `LocalAppContext`
- Added `LocalAppContext` to provide a localized context throughout the app.
- Implemented `LocaleManager` to update the application's locale.
- Updated various screens and components to use `LocalAppContext.current.getString()` instead of `stringResource()` for localization.
- Added English translation files (`values-en/strings.xml`) for all relevant modules.
- Modified `DataStoreManager` and `PreferencesRepository` to store and retrieve `AppLocale` instead of a `String` for the locale.
- Updated `SettingLanguageViewModel` to manage available and selected locales.
- Updated `SettingLanguageScreenRoot` to display language options and allow users to change the language.
- Initialized `AppLocale` in `App` and `MainActivity` to set the application's language on startup.
- Added `CustomOption` composable for displaying selectable options with radio buttons.

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="understand">Понятно</string>
     <string name="repeat">Повторить</string>
     <string name="exit_double_tap">Нажмите назад ещё раз, чтобы выйти</string>
+    <string name="will_be_add">Будет добавлено позже</string>
     
     <string name="currency_rub">Российский рубль</string>
     <string name="currency_usd">Американский доллар</string>
