--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">EconomyApp</string>
+    <string name="app_name" translatable="false">EconomyApp</string>
     <string name="no_internet_connection">Нет подключения к интернету</string>
 </resources>
