Refactor: Implement dynamic theme color selection
- Introduced `ThemeColor` enum for predefined theme colors.
- Updated `PreferencesRepository` and `DataStoreManager` to store and retrieve `ThemeColor` instead of an `Int`.
- Modified `EconomyAppTheme` to accept `ThemeColor` and generate color schemes dynamically using `ColorPresets`.
- Created `ColorPresets` object to define and provide `Color` values for each `ThemeColor`.
- Implemented `SettingMainColorScreen` for users to select their preferred theme color:
    - `SettingMainColorViewModel` now manages `ThemeColor` selection and available color options.
    - `SettingMainColorState` updated to hold the selected `ThemeColor` and a list of `ThemeColorUiModel`.
    - `ThemeColorUiModel` created to represent color options with labels and preview colors.
    - Added `labelRes` and `previewColor` mapper functions for `ThemeColor`.
- Added string resources for color names.
- Adjusted `MainActivity` to pass the selected `ThemeColor` to `EconomyAppTheme`.
- Tinted currency icons in `SheetCurrencies` with `onSurfaceVariant` color.
- Changed `DarkRedBackground` color in `Color.kt`.
- Adjusted bottom padding in `MainActivity` to account for system navigation bar.

--- a/core/ui/src/main/res/values-en/strings.xml
+++ b/core/ui/src/main/res/values-en/strings.xml
@@ -48,6 +48,13 @@
     <string name="empty">Empty there</string>
     <string name="other">Other</string>
 
+    <!--  Colors  -->
+    <string name="color_green">Green</string>
+    <string name="color_blue">Blue</string>
+    <string name="color_orange">Orange</string>
+    <string name="color_purple">Purple</string>
+    <string name="color_pink">Pink</string>
+
     <!-- Alert -->
     <string name="alert_base_title">Error</string>
     <string name="alert_base_description">An unexpected error occurred. Please try again later</string>
