--- a/features/settings/src/main/res/values-en/strings.xml
+++ b/features/settings/src/main/res/values-en/strings.xml
@@ -3,10 +3,14 @@
     <string name="settings_title">Settings</string>
     <string name="settings_dark_theme">Dark theme</string>
     <string name="settings_main_color">Main color</string>
-    <string name="settings_vibrate">Haptics</string>
     <string name="settings_password">Password</string>
     <string name="settings_sync">Synchronization</string>
     <string name="settings_language">Language</string>
+
+    <string name="settings_vibrate">Haptics</string>
+    <string name="settings_vibrate_easy">Easy</string>
+    <string name="settings_vibrate_medium">Medium</string>
+    <string name="settings_vibrate_hard">Hard</string>
 
     <string name="settings_about">About</string>
     <string name="settings_about_version">Version: %1$s (%2$s)</string>
