--- a/features/settings/src/main/res/values/strings.xml
+++ b/features/settings/src/main/res/values/strings.xml
@@ -3,10 +3,14 @@
     <string name="settings_title">Настройки</string>
     <string name="settings_dark_theme">Темная тема</string>
     <string name="settings_main_color">Основной цвет</string>
-    <string name="settings_vibrate">Хаптики</string>
     <string name="settings_password">Код пароль</string>
     <string name="settings_sync">Синхронизация</string>
     <string name="settings_language">Язык</string>
+
+    <string name="settings_vibrate">Хаптики</string>
+    <string name="settings_vibrate_easy">Cлабые</string>
+    <string name="settings_vibrate_medium">Средние</string>
+    <string name="settings_vibrate_hard">Сильные</string>
 
     <string name="settings_about">О программе</string>
     <string name="settings_about_version">Версия: %1$s (%2$s)</string>
